Se agregó favicon

--- a/lasagna.html
+++ b/lasagna.html
@@ -1,62 +1,79 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mis Recetas - Cocina italiana</title>
-    <link rel="stylesheet" href="./css/lasagna.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./css/lasagna.css" />
+    <link rel="shortcut icon" href="./img/favicon.jpeg" type="image/x-icon" />
+  </head>
+  <body>
     <header>
-        <h1>Receta de Lasagna Clásica</h1>
-        <p>Una receta tradicional y deliciosa de lasagna italiana.</p>
+      <h1>Receta de Lasagna Clásica</h1>
+      <p>Una receta tradicional y deliciosa de lasagna italiana.</p>
     </header>
 
     <main>
-        <section>
-            <h2>Lasagna Clásica</h2>
-            <img src="./img/lasagna.jpeg" alt="Lasagna Clásica">
-            <p>Disfruta de esta deliciosa receta de lasagna clásica, un plato italiano amado en todo el mundo.</p>
-            
-            <h3>Ingredientes</h3>
-            <ul>
-                <li>500g de carne molida de res</li>
-                <li>1 cebolla picada</li>
-                <li>2 dientes de ajo picados</li>
-                <li>800g de puré de tomate</li>
-                <li>12 láminas de pasta para lasagna</li>
-                <li>400g de queso ricotta</li>
-                <li>200g de queso mozzarella rallado</li>
-                <li>50g de queso parmesano rallado</li>
-                <li>Sal y pimienta al gusto</li>
-                <li>Orégano y albahaca al gusto</li>
-            </ul>
+      <section>
+        <h2>Lasagna Clásica</h2>
+        <img src="./img/lasagna.jpeg" alt="Lasagna Clásica" />
+        <p>
+          Disfruta de esta deliciosa receta de lasagna clásica, un plato
+          italiano amado en todo el mundo.
+        </p>
 
-            <h3>Preparación</h3>
-            <ol>
-                <li>Precalienta el horno a 180°C.</li>
-                <li>En una sartén, dora la carne molida con la cebolla y el ajo hasta que estén cocidos.</li>
-                <li>Agrega el puré de tomate, sal, pimienta, orégano y albahaca. Cocina a fuego lento por 15 minutos.</li>
-                <li>En una fuente para horno, coloca una capa de salsa, una capa de láminas de pasta, y una capa de queso ricotta.</li>
-                <li>Repite el proceso hasta terminar con una capa de salsa y cubre con el queso mozzarella y parmesano rallado.</li>
-                <li>Hornea durante 35-40 minutos o hasta que el queso esté dorado y burbujeante.</li>
-                <li>Deja reposar unos minutos antes de servir y disfruta.</li>
-            </ol>
-        </section>
-        <section>
-            <h2>Recetas Relacionadas</h2>
-            <ul>
-                <li><a href="index.html">Pasta Carbonara</a></li>
-                <li><a href="pizza.html">Pizza Margarita</a></li>
-                <li><a href="tiramisu.html">Tiramisú Italiano</a></li>
-            </ul>
-        </section>
+        <h3>Ingredientes</h3>
+        <ul>
+          <li>500g de carne molida de res</li>
+          <li>1 cebolla picada</li>
+          <li>2 dientes de ajo picados</li>
+          <li>800g de puré de tomate</li>
+          <li>12 láminas de pasta para lasagna</li>
+          <li>400g de queso ricotta</li>
+          <li>200g de queso mozzarella rallado</li>
+          <li>50g de queso parmesano rallado</li>
+          <li>Sal y pimienta al gusto</li>
+          <li>Orégano y albahaca al gusto</li>
+        </ul>
+
+        <h3>Preparación</h3>
+        <ol>
+          <li>Precalienta el horno a 180°C.</li>
+          <li>
+            En una sartén, dora la carne molida con la cebolla y el ajo hasta
+            que estén cocidos.
+          </li>
+          <li>
+            Agrega el puré de tomate, sal, pimienta, orégano y albahaca. Cocina
+            a fuego lento por 15 minutos.
+          </li>
+          <li>
+            En una fuente para horno, coloca una capa de salsa, una capa de
+            láminas de pasta, y una capa de queso ricotta.
+          </li>
+          <li>
+            Repite el proceso hasta terminar con una capa de salsa y cubre con
+            el queso mozzarella y parmesano rallado.
+          </li>
+          <li>
+            Hornea durante 35-40 minutos o hasta que el queso esté dorado y
+            burbujeante.
+          </li>
+          <li>Deja reposar unos minutos antes de servir y disfruta.</li>
+        </ol>
+      </section>
+      <section>
+        <h2>Recetas Relacionadas</h2>
+        <ul>
+          <li><a href="index.html">Pasta Carbonara</a></li>
+          <li><a href="pizza.html">Pizza Margarita</a></li>
+          <li><a href="tiramisu.html">Tiramisú Italiano</a></li>
+        </ul>
+      </section>
     </main>
-    
-    <footer>
-        <p>&copy; 2024 Recetas Deliciosas. Todos los derechos reservados.</p>
-    </footer>
 
-</body>
+    <footer>
+      <p>&copy; 2024 Recetas Deliciosas. Todos los derechos reservados.</p>
+    </footer>
+  </body>
 </html>
