--- a/pizza.html
+++ b/pizza.html
@@ -1,58 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mis Recetas - Cocina italiana</title>
-    <link rel="stylesheet" href="./css/pizza.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./css/pizza.css" />
+    <link rel="shortcut icon" href="./img/favicon.jpeg" type="image/x-icon" />
+  </head>
+  <body>
     <header>
-        <h1>Receta de Pizza Margarita</h1>
-        <p>La clásica y deliciosa pizza italiana con tomate, mozzarella y albahaca fresca.</p>
+      <h1>Receta de Pizza Margarita</h1>
+      <p>
+        La clásica y deliciosa pizza italiana con tomate, mozzarella y albahaca
+        fresca.
+      </p>
     </header>
 
     <main>
-        <section>
-            <h2>Pizza Margarita</h2>
-            <img src="./img/pizza.jpeg" alt="Pizza Margarita">
-            <p>La Pizza Margarita es una receta tradicional de Italia que combina pocos ingredientes para lograr un sabor fresco y delicioso.</p>
-            
-            <h3>Ingredientes</h3>
-            <ul>
-                <li>1 masa para pizza (puede ser casera o comprada)</li>
-                <li>200g de salsa de tomate</li>
-                <li>200g de mozzarella fresca en rodajas</li>
-                <li>Hojas de albahaca fresca</li>
-                <li>Aceite de oliva</li>
-                <li>Sal al gusto</li>
-            </ul>
+      <section>
+        <h2>Pizza Margarita</h2>
+        <img src="./img/pizza.jpeg" alt="Pizza Margarita" />
+        <p>
+          La Pizza Margarita es una receta tradicional de Italia que combina
+          pocos ingredientes para lograr un sabor fresco y delicioso.
+        </p>
 
-            <h3>Preparación</h3>
-            <ol>
-                <li>Precalienta el horno a 220°C.</li>
-                <li>Extiende la masa de pizza sobre una bandeja de horno enharinada.</li>
-                <li>Esparce la salsa de tomate de manera uniforme sobre la masa, dejando un borde de aproximadamente 1 cm sin cubrir.</li>
-                <li>Coloca las rodajas de mozzarella sobre la salsa de tomate.</li>
-                <li>Rocía un poco de aceite de oliva sobre la pizza y añade sal al gusto.</li>
-                <li>Hornea durante 10-12 minutos o hasta que la masa esté dorada y el queso se derrita y burbujee.</li>
-                <li>Retira la pizza del horno y decora con hojas de albahaca fresca antes de servir.</li>
-            </ol>
-        </section>
-        <section>
-            <h2>Recetas Relacionadas</h2>
-            <ul>
-                <li><a href="index.html">Pasta Carbonara</a></li>
-                <li><a href="lasagna.html">Lasagna Clásica</a></li>
-                <li><a href="tiramisu.html">Tiramisú Italiano</a></li>
-            </ul>
-        </section>
+        <h3>Ingredientes</h3>
+        <ul>
+          <li>1 masa para pizza (puede ser casera o comprada)</li>
+          <li>200g de salsa de tomate</li>
+          <li>200g de mozzarella fresca en rodajas</li>
+          <li>Hojas de albahaca fresca</li>
+          <li>Aceite de oliva</li>
+          <li>Sal al gusto</li>
+        </ul>
+
+        <h3>Preparación</h3>
+        <ol>
+          <li>Precalienta el horno a 220°C.</li>
+          <li>
+            Extiende la masa de pizza sobre una bandeja de horno enharinada.
+          </li>
+          <li>
+            Esparce la salsa de tomate de manera uniforme sobre la masa, dejando
+            un borde de aproximadamente 1 cm sin cubrir.
+          </li>
+          <li>Coloca las rodajas de mozzarella sobre la salsa de tomate.</li>
+          <li>
+            Rocía un poco de aceite de oliva sobre la pizza y añade sal al
+            gusto.
+          </li>
+          <li>
+            Hornea durante 10-12 minutos o hasta que la masa esté dorada y el
+            queso se derrita y burbujee.
+          </li>
+          <li>
+            Retira la pizza del horno y decora con hojas de albahaca fresca
+            antes de servir.
+          </li>
+        </ol>
+      </section>
+      <section>
+        <h2>Recetas Relacionadas</h2>
+        <ul>
+          <li><a href="index.html">Pasta Carbonara</a></li>
+          <li><a href="lasagna.html">Lasagna Clásica</a></li>
+          <li><a href="tiramisu.html">Tiramisú Italiano</a></li>
+        </ul>
+      </section>
     </main>
-    
-    <footer>
-        <p>&copy; 2024 Recetas Deliciosas. Todos los derechos reservados.</p>
-    </footer>
 
-</body>
+    <footer>
+      <p>&copy; 2024 Recetas Deliciosas. Todos los derechos reservados.</p>
+    </footer>
+  </body>
 </html>
