--- a/tiramisu.html
+++ b/tiramisu.html
@@ -1,60 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mis Recetas - Cocina italiana</title>
-    <link rel="stylesheet" href="./css/tiramisu.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./css/tiramisu.css" />
+    <link rel="shortcut icon" href="./img/favicon.jpeg" type="image/x-icon" />
+  </head>
+  <body>
     <header>
-        <h1>Receta de Tiramisú Italiano</h1>
-        <p>El postre italiano por excelencia, cremoso y delicioso.</p>
+      <h1>Receta de Tiramisú Italiano</h1>
+      <p>El postre italiano por excelencia, cremoso y delicioso.</p>
     </header>
 
     <main>
-        <section>
-            <h2>Tiramisú Italiano</h2>
-            <img src="./img/tiramisu.jpeg" alt="Tiramisú Italiano">
-            <p>Este tiramisú auténtico combina capas de café, mascarpone y cacao en polvo para un postre exquisito y clásico.</p>
-            
-            <h3>Ingredientes</h3>
-            <ul>
-                <li>300g de bizcochos de soletilla</li>
-                <li>500g de queso mascarpone</li>
-                <li>4 huevos (separar las claras de las yemas)</li>
-                <li>100g de azúcar</li>
-                <li>1 taza de café fuerte (enfriado)</li>
-                <li>Cacao en polvo para espolvorear</li>
-                <li>Opcional: un chorrito de licor (como Amaretto o Marsala)</li>
-            </ul>
+      <section>
+        <h2>Tiramisú Italiano</h2>
+        <img src="./img/tiramisu.jpeg" alt="Tiramisú Italiano" />
+        <p>
+          Este tiramisú auténtico combina capas de café, mascarpone y cacao en
+          polvo para un postre exquisito y clásico.
+        </p>
 
-            <h3>Preparación</h3>
-            <ol>
-                <li>Prepara una taza de café fuerte y déjalo enfriar. Agrega un poco de licor si lo deseas.</li>
-                <li>En un bol, bate las yemas de huevo con el azúcar hasta obtener una mezcla espumosa y de color claro.</li>
-                <li>Agrega el queso mascarpone a la mezcla de yemas y azúcar, y mezcla hasta que esté suave y homogéneo.</li>
-                <li>En otro bol, bate las claras a punto de nieve y luego incorpóralas suavemente a la mezcla de mascarpone.</li>
-                <li>Remoja brevemente los bizcochos de soletilla en el café frío y colócalos en una capa en el fondo de un molde.</li>
-                <li>Extiende una capa de la mezcla de mascarpone sobre los bizcochos. Repite las capas de bizcochos y crema hasta terminar con una capa de crema.</li>
-                <li>Refrigera el tiramisú durante al menos 4 horas (mejor si es toda la noche).</li>
-                <li>Antes de servir, espolvorea cacao en polvo sobre la superficie.</li>
-            </ol>
-        </section>
-        <section>
-            <h2>Recetas Relacionadas</h2>
-            <ul>
-                <li><a href="index.html">Pasta Carbonara</a></li>
-                <li><a href="pizza.html">Pizza Margarita</a></li>
-                <li><a href="lasagna.html">Lasagna Clásica</a></li>
-            </ul>
-        </section>
+        <h3>Ingredientes</h3>
+        <ul>
+          <li>300g de bizcochos de soletilla</li>
+          <li>500g de queso mascarpone</li>
+          <li>4 huevos (separar las claras de las yemas)</li>
+          <li>100g de azúcar</li>
+          <li>1 taza de café fuerte (enfriado)</li>
+          <li>Cacao en polvo para espolvorear</li>
+          <li>Opcional: un chorrito de licor (como Amaretto o Marsala)</li>
+        </ul>
+
+        <h3>Preparación</h3>
+        <ol>
+          <li>
+            Prepara una taza de café fuerte y déjalo enfriar. Agrega un poco de
+            licor si lo deseas.
+          </li>
+          <li>
+            En un bol, bate las yemas de huevo con el azúcar hasta obtener una
+            mezcla espumosa y de color claro.
+          </li>
+          <li>
+            Agrega el queso mascarpone a la mezcla de yemas y azúcar, y mezcla
+            hasta que esté suave y homogéneo.
+          </li>
+          <li>
+            En otro bol, bate las claras a punto de nieve y luego incorpóralas
+            suavemente a la mezcla de mascarpone.
+          </li>
+          <li>
+            Remoja brevemente los bizcochos de soletilla en el café frío y
+            colócalos en una capa en el fondo de un molde.
+          </li>
+          <li>
+            Extiende una capa de la mezcla de mascarpone sobre los bizcochos.
+            Repite las capas de bizcochos y crema hasta terminar con una capa de
+            crema.
+          </li>
+          <li>
+            Refrigera el tiramisú durante al menos 4 horas (mejor si es toda la
+            noche).
+          </li>
+          <li>
+            Antes de servir, espolvorea cacao en polvo sobre la superficie.
+          </li>
+        </ol>
+      </section>
+      <section>
+        <h2>Recetas Relacionadas</h2>
+        <ul>
+          <li><a href="index.html">Pasta Carbonara</a></li>
+          <li><a href="pizza.html">Pizza Margarita</a></li>
+          <li><a href="lasagna.html">Lasagna Clásica</a></li>
+        </ul>
+      </section>
     </main>
-    
-    <footer>
-        <p>&copy; 2024 Recetas Deliciosas. Todos los derechos reservados.</p>
-    </footer>
 
-</body>
+    <footer>
+      <p>&copy; 2024 Recetas Deliciosas. Todos los derechos reservados.</p>
+    </footer>
+  </body>
 </html>
